--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.26.0'  # Flutter >=3.26 includes Dart 3.8.1+
+          flutter-version: '3.13.0'  # stable version with Dart >=3.8.1
           channel: 'stable'
 
       - name: Check Flutter & Dart version
@@ -43,10 +43,10 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Android APK
+      - name: Build Android APK (debug)
         run: flutter build apk --debug
 
-      - name: Build Android App Bundle (unsigned)
+      - name: Build Android App Bundle (release unsigned)
         run: flutter build appbundle --release --no-shrink
 
       - name: Upload Android artifacts
@@ -68,7 +68,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.26.0'  # Flutter >=3.26 includes Dart 3.8.1+
+          flutter-version: '3.13.0'  # stable version with Dart >=3.8.1
           channel: 'stable'
 
       - name: Check Flutter & Dart version
@@ -86,5 +86,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ios-builds
-          path: |
-            build/ios/iphoneos/*.app
+          path: build/ios/iphoneos/*.app
