--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,14 +29,10 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.13.6'   # stable version with Dart >=3.8.1
-          channel: 'stable'
-
-      - name: Check Flutter & Dart version
+      - name: Setup Flutter (3.13.6 with Dart >=3.8.1)
         run: |
+          git clone https://github.com/flutter/flutter.git --branch 3.13.6 --depth 1 ~/flutter
+          echo "$HOME/flutter/bin" >> $GITHUB_PATH
           flutter --version
           dart --version
 
@@ -65,14 +61,10 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.13.6'   # stable version with Dart >=3.8.1
-          channel: 'stable'
-
-      - name: Check Flutter & Dart version
+      - name: Setup Flutter (3.13.6 with Dart >=3.8.1)
         run: |
+          git clone https://github.com/flutter/flutter.git --branch 3.13.6 --depth 1 ~/flutter
+          echo "$HOME/flutter/bin" >> $GITHUB_PATH
           flutter --version
           dart --version
 
