--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,83 +1,29 @@
-name: Flutter Build Dispatcher
+name: Flutter CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
-  dispatcher:
-    runs-on: macos-latest
-    outputs:
-      android_job: ${{ steps.set-outputs.outputs.android }}
-      ios_job: ${{ steps.set-outputs.outputs.ios }}
-    steps:
-      - name: Set outputs for jobs
-        id: set-outputs
-        run: |
-          echo "android=true" >> $GITHUB_OUTPUT
-          echo "ios=true" >> $GITHUB_OUTPUT
-
-  android-build:
+  build:
     runs-on: ubuntu-latest
-    needs: dispatcher
-    if: ${{ needs.dispatcher.outputs.android_job == 'true' }}
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
 
-      - name: Setup Flutter (3.13.6 with Dart >=3.8.1)
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Clone Flutter SDK (3.27.2)
         run: |
-          git clone https://github.com/flutter/flutter.git --branch 3.13.6 --depth 1 ~/flutter
+          git clone https://github.com/flutter/flutter.git --branch 3.27.2 --depth 1 ~/flutter
           echo "$HOME/flutter/bin" >> $GITHUB_PATH
-          export PATH="$HOME/flutter/bin:$PATH"
-          flutter --version
-          dart --version
+
+      - name: Flutter version
+        run: flutter --version
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Android APK (debug)
+      - name: Run build (example APK build)
         run: flutter build apk --debug
-
-      - name: Build Android App Bundle (release unsigned)
-        run: flutter build appbundle --release --no-shrink
-
-      - name: Upload Android artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-builds
-          path: |
-            build/app/outputs/flutter-apk/*.apk
-            build/app/outputs/bundle/release/*.aab
-
-  ios-build:
-    runs-on: macos-latest
-    needs: dispatcher
-    if: ${{ needs.dispatcher.outputs.ios_job == 'true' }}
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-
-      - name: Setup Flutter (3.13.6 with Dart >=3.8.1)
-        run: |
-          git clone https://github.com/flutter/flutter.git --branch 3.13.6 --depth 1 ~/flutter
-          echo "$HOME/flutter/bin" >> $GITHUB_PATH
-          export PATH="$HOME/flutter/bin:$PATH"
-          flutter --version
-          dart --version
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build iOS (no codesign)
-        run: flutter build ios --release --no-codesign
-
-      - name: Upload iOS artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-builds
-          path: build/ios/iphoneos/*.app
