--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,28 +1,72 @@
-name: Flutter CI
+name: Flutter Build
 
 on:
+  workflow_dispatch:   # manual trigger
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build:
+  android-build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout source
         uses: actions/checkout@v3
 
-      - name: Clone Flutter SDK (3.27.2 with Dart 3.8.1)
+      - name: Clone Flutter SDK (3.27.2)
         run: |
           git clone https://github.com/flutter/flutter.git --branch 3.27.2 --depth 1 ~/flutter
           echo "$HOME/flutter/bin" >> $GITHUB_PATH
+
+      - name: Check Flutter & Dart version
+        run: |
           flutter --version
           dart --version
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Run build (example APK build)
+      - name: Build Android APK (debug)
         run: flutter build apk --debug
+
+      - name: Build Android App Bundle (release unsigned)
+        run: flutter build appbundle --release --no-shrink
+
+      - name: Upload Android artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-builds
+          path: |
+            build/app/outputs/flutter-apk/*.apk
+            build/app/outputs/bundle/release/*.aab
+
+  ios-build:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+
+      - name: Clone Flutter SDK (3.27.2)
+        run: |
+          git clone https://github.com/flutter/flutter.git --branch 3.27.2 --depth 1 ~/flutter
+          echo "$HOME/flutter/bin" >> $GITHUB_PATH
+
+      - name: Check Flutter & Dart version
+        run: |
+          flutter --version
+          dart --version
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build iOS (no codesign)
+        run: flutter build ios --release --no-codesign
+
+      - name: Upload iOS artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-builds
+          path: build/ios/iphoneos/*.app
